Modified: main.css, index.html, index.js

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,13 @@
 body, html {
     padding: 0;
     margin: 0;
+    text-align: center;
+    font-size: 30px;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
     align-items: center;
 }
 
